--- a/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -11,11 +11,11 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
-      key-deserializer: org.apache.kafka.common.serialization.StringSerializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonSerializer
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: '*'
-        spring.json.type.mapping: orderConfirmation:dev.anirudh.ecommerce.kafka.OrderConfirmation,paymentConfirmation:dev.anirudh.ecommerce.notification.PaymentNotificationRequest
+        spring.json.type.mapping: orderConfirmation:dev.anirudh.ecommerce.kafka.order.OrderConfirmation,paymentConfirmation:dev.anirudh.ecommerce.kafka.payment.PaymentConfirmation
       group-id: paymentGroup, orderGroup
       auto-offset-reset: earliest
   mail:
