Added elasticSearch config file in Product service.

--- a/services/config-server/src/main/resources/configurations/product-service.yml
+++ b/services/config-server/src/main/resources/configurations/product-service.yml
@@ -16,6 +16,8 @@ spring:
     baseline-version: 0
     user: ${spring.datasource.username}
     password: ${spring.datasource.password}
+  elasticsearch:
+    uris: http://localhost:9200
 server:
   port: 8050
  
